<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnRegistrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:contentDescription="@string/imgvTaxi"
            android:src="@drawable/taxi" />

        <TextView
            android:id="@+id/txtvDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvDni" />

        <EditText
            android:id="@+id/edtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtvNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvNombres" />

        <EditText
            android:id="@+id/edtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvEmail" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvPass" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvTelefono" />

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDireccion" />

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/txtvDistrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvDistrito" />

        <Spinner
            android:id="@+id/spnDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvFoto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edtFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <Button
                android:id="@+id/btnCargar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnCargar" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvVehiculo" />

        <Spinner
            android:id="@+id/spnVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegistrarTaxista"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar" />

    </LinearLayout>
    

</ScrollView>