<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/imgvTaxi"
            android:src="@drawable/taxi" />

        <TextView
            android:id="@+id/txtvMensaje"
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/txtvMensaje" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnEnviar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnviar" />

    </LinearLayout>
    

</ScrollView>